# NotepadAI

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
doc/: AcpAgents.md
src/: AcpAgentDefinition.h  AcpAgentManager.cpp  AcpAgentManager.h  AcpAgentRegistry.cpp  AcpAgentRegistry.h  AcpConnection.cpp  AcpConnection.h  AcpErrorClassifier.cpp  AcpErrorClassifier.h  AcpHistoryStore.cpp  AcpHistoryStore.h  AcpProtocol.cpp  AcpProtocol.h  AcpSessionModel.cpp  AcpSessionModel.h  ApplicationSettings.cpp  ApplicationSettings.h  BrowserProxyArgs.cpp  BrowserProxyArgs.h  CMakeLists.txt  CrashHandler.cpp  DockAreaSanitizer.cpp  DockAreaSanitizer.h  DockedEditor.cpp  DockedEditor.h  EditorManager.cpp  EditorManager.h  FileIndexCache.h  FileWatcher.cpp  FileWatcher.h  FolderSearchEngine.cpp  FolderSearchEngine.h  GoalActionParser.cpp  GoalActionParser.h  GoalAgent.cpp  GoalAgent.h  GoalAgentSettings.cpp  GoalAgentSettings.h  GoalConversationSummary.cpp  GoalConversationSummary.h  (+27 more)
src/ai/: ILlmHttpClient.h  LlmHttpClient.cpp  PromptImprover.cpp  PromptImprover.h
src/decorators/: HighlightedScrollBar.cpp  JustfileRecipeHighlighter.cpp  JustfileRecipeHighlighter.h
src/dialogs/: AcpAgentSettingsDialog.cpp  AcpAgentSettingsDialog.h  AcpAgentSettingsDialog.ui  EditMiniAppsDialog.cpp  EditMiniAppsDialog.h  EditScheduledTaskDialog.cpp  FindReplaceDialog.cpp  GoalDraftDialog.cpp  GoalDraftDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PreferencesDialog.cpp  PreferencesDialog.ui  QuickFileOpenDialog.cpp  QuickFileOpenDialog.h  SendWithGoalDialog.cpp  SendWithGoalDialog.h  SshConnectDialog.h  SshRemoteFolderPickerDialog.cpp  TransferConflictDialog.cpp  TransferConflictDialog.h  TransferLogDialog.cpp  TransferLogDialog.h
src/docks/: AiAgentDock.cpp  AiAgentDock.h  FindInFolderDock.cpp  FindInFolderDock.h  FindInFolderDock.ui  FolderAsWorkspaceDock.cpp  FolderAsWorkspaceDock.h  FolderAsWorkspaceProxyModel.cpp  FolderAsWorkspaceProxyModel.h  SearchResultsDock.cpp  TerminalDock.cpp  TerminalDock.h
src/git/: BranchPickerPopup.cpp  BranchPickerPopup.h  ChangesPanel.cpp  ChangesPanel.h  CommitComposer.cpp  GitCommitDetail.h  GitCommitFetcher.cpp  GitCommitFetcher.h  GitCommitInfo.h  GitCommitRenderer.cpp  GitCommitRenderer.h  GitCommitView.cpp  GitCommitView.h  GitController.cpp  GitController.h  GitDiffPainter.cpp  GitDiffPainter.h  GitDiffPalette.cpp  GitDiffPalette.h  GitFileAtShaFetcher.cpp  GitFileAtShaFetcher.h  GitHistoryFetcher.cpp  GitHistoryFetcher.h  GitHistoryItemDelegate.cpp  GitHistoryItemDelegate.h  GitHistoryModel.cpp  GitHistoryModel.h  GitHistoryView.cpp  GitHistoryView.h  GitLogParser.cpp  GitLogParser.h  GitProcessRunner.cpp  GitProcessRunner.h  GitStatusEntry.h  GitStatusItemDelegate.cpp  GitStatusModel.cpp  GitStatusModel.h  GitStatusParser.cpp  GitTabSegmentedBar.cpp  GitTabSegmentedBar.h  (+8 more)
src/languages/: justfile.lua
src/remote/: ExecutionContext.h  GitignoreMatcher.cpp  GitignoreMatcher.h  ISshTransport.h  Libssh2Transport.cpp  Libssh2Transport.h  RemoteFileSystemModel.cpp  RemoteFileSystemModel.h  RemoteFsBackend.cpp  RemoteFsBackend.h  RemoteTransferManager.cpp  RemoteTransferManager.h  SshConnection.cpp  SshConnection.h  SshProfile.h  SshSessionWorker.cpp  SshSessionWorker.h  wildmatch.c  wildmatch.h
src/scripts/: init.lua
src/stylesheets/: npp_dark.css
src/widgets/: AcpImageAttachmentList.cpp  AcpImageAttachmentList.h  AcpMessageWidget.cpp  AcpMessageWidget.h  AcpPermissionPrompt.cpp  AcpPermissionPrompt.h  AcpPlanWidget.cpp  AcpPlanWidget.h  AcpSessionView.cpp  AcpSessionView.h  AcpToolCallCard.cpp  AcpToolCallCard.h  AcpUsageIndicator.cpp  AcpUsageIndicator.h  DockMiddleClickCloser.cpp  DockMiddleClickCloser.h  QuickFindWidget.cpp  ScrollbackBuffer.cpp  ScrollbackBuffer.h  TaskRunnerGutter.cpp  TerminalCellSource.cpp  TerminalCellSource.h  TerminalColorScheme.cpp  TerminalColorScheme.h  TerminalWidget.cpp  TerminalWidget.h  TransferProgressBar.cpp  TransferProgressBar.h  WebViewWidget.cpp  WebViewWidget.h  WebViewWidget_mac.mm  WebViewWidget_win.cpp
tests/: CMakeLists.txt  FakeSshTransport.h  test_acp_agent_exit_restart.cpp  test_acp_agent_manager.cpp  test_acp_agent_registry.cpp  test_acp_dock_close_event.cpp  test_acp_error_classifier.cpp  test_acp_history_store.cpp  test_acp_image_attachment_limits.cpp  test_acp_jsonrpc_framing.cpp  test_acp_message_widget_streaming.cpp  test_acp_path_sandbox.cpp  test_acp_permission_policy.cpp  test_acp_protocol_serialization.cpp  test_acp_session_model.cpp  test_acp_session_model_persistence_integration.cpp  test_acp_spawn_argv.cpp  test_acp_tool_call_card.cpp  test_acp_usage_indicator.cpp  test_application_settings.cpp  test_application_settings_terminal.cpp  test_browser_proxy_args.cpp  test_docked_editor_current_area.cpp  test_folder_workspace_proxy.cpp  test_git_history_model.cpp  test_git_log_parser.cpp  test_goal_draft_generator.cpp  test_preferences_theme_binding.cpp  test_quick_file_open_empty.cpp  test_quick_file_open_scoring.cpp  test_quick_file_open_topk.cpp  test_recursive_tree_watcher_logic.cpp  test_scrollback_buffer.cpp  test_stylesheet_resource.cpp  test_terminal_color_scheme.cpp  test_terminal_cwd_resolver.cpp  test_terminal_selection.cpp  test_theme_resolver.cpp  test_workspace_enumerator_merge.cpp
